Change Log for OpenXava project
===============================

- Fix: IForwardAction does not work if the application is behind a proxy.
- Fix: URLValidator for WEBURL stereotype falsely triggers for correct URLs.
- Driver version in doc and new projects upgraded for AS/400.
- Embedded Tomcat used in development upgraded to 9.0.80.
- Groovy upgraded to 4.0.14
- Fix: View.selLabelId() for references as @DescriptionsList fails from time to time.
- Fix: Grouping after filtering or sorting the list fails if the @Tab has a baseCondition and an IFilter. 
- Fix: Going back to "No grouping" in list fails if we have used setBaseCondition() on the Tab object.
- Fix: Filtering by date and time in list does not found the record if it has seconds or milliseconds in db.
- New method cloneWith59999 in the Dates utility class to set seconds to 59 and milliseconds 999.

OpenXava 7.1.5 (2023-8-25)
--------------------------
- New CompositeFilter to sum two IFilter to set with Tab.setFilter() or as base for an IFilter for @Tab.
- New environment variable XAVA_CALENDAR_VIEWEVENT_ACTION to define the action on click in a calendar event.
- New method cloneWith999() in the Dates utility class to set milliseconds of a date to 999.
- Driver version in doc and new projects upgraded for Microsoft SQL Server.
- Documentation to configure MariaDB for OpenXava applications.
- Fix: Id number instead of document name for @File properties when calling Generate PDF or generate Excel.
- Fix: Generate Excel sometimes exports dates with 2 digits for year, so it's misinterpreted by Excel. 
- Fix: Servlet request not updated on view just after showing a new view or a dialog.  
- Fix: @OnChange action called twice in collection element dialog with groups inside a section. 
- Fix: Using @SearchListCondition in a reference the columns customization done on the search list is lost.
- Fix: @Editor("ValidValuesRadioButton") for an enum produces an IndexOutOfBoundsException in the log.