@@ -6,31 +6,54 @@
   </head>
   <body>
     <div class="wiki" id="content_view" style="display: block;">
-      <h1 id="toc0"><a name="Internationalization (i18n)"></a> <span id="breadcrumbs"> <span
-            id="openxava"> <a href="https://www.openxava.org/"> <span>o</span>pen<span>x</span>ava </a> </span> / <a
-            href="index_en.html">documentation</a> / </span> Internationalization (i18n) </h1>
+      <h1 id="toc0"><a name="Internationalization (i18n)"></a> <span id="breadcrumbs">
+          <span id="openxava"> <a href="https://www.openxava.org/"> <span>o</span>pen<span>x</span>ava
+              </a> </span> / <a href="index_en.html">documentation</a> / </span>
+        Internationalization (i18n) </h1>
       <div id="toc">
         <h1 class="nopad">Table of Contents</h1>
-        <div style="margin-left: 1em;"><a href="#Internationalization%20%28i18n%29">Internationalization (i18n)</a></div>
+        <div style="margin-left: 1em;"><a href="#Internationalization%20%28i18n%29">Internationalization
+            (i18n)</a></div>
         <div style="margin-left: 2em;"><a href="#Internationalization%20%28i18n%29-Labels">Labels</a></div>
-        <div style="margin-left: 3em;"><a href="#Internationalization%20%28i18n%29-Labels-Application%20Name">Application Name</a></div>
-        <div style="margin-left: 3em;"><a href="#Internationalization%20%28i18n%29-Labels-Module%20Name">Module Name</a></div>
-        <div style="margin-left: 3em;"><a href="#Internationalization%20%28i18n%29-Labels-Field%20Name">Field Name</a></div>
-        <div style="margin-left: 3em;"><a href="#Internationalization%20%28i18n%29-Labels-@View%20Section%20and%20Group%20Names">@View Section and Group Names</a></div>
+        <div style="margin-left: 3em;"><a href="#Internationalization%20%28i18n%29-Labels-Application%20Name">Application
+            Name</a></div>
+        <div style="margin-left: 3em;"><a href="#Internationalization%20%28i18n%29-Labels-Module%20Name">Module
+            Name</a></div>
+        <div style="margin-left: 3em;"><a href="#Internationalization%20%28i18n%29-Labels-Field%20Name">Field
+            Name</a></div>
+        <div style="margin-left: 3em;"><a href="#Internationalization%20%28i18n%29-Labels-@View%20Section%20and%20Group%20Names">@View
+            Section and Group Names</a></div>
         <div style="margin-left: 3em;"><a href="#Internationalization%20%28i18n%29-Labels-Actions">Actions</a></div>
         <div style="margin-left: 3em;"><a href="#organization">Organization</a></div>
         <div style="margin-left: 2em;"><a href="#Internationalization%20%28i18n%29-Messages">Messages</a></div>
         <div style="margin-left: 2em;"><a href="#Internationalization%20%28i18n%29-Tooltips">Tooltips</a></div>
-        <div style="margin-left: 2em;"><a href="#Internationalization%20%28i18n%29-Placeholder%20%28new%20in%20v5.8%29">Placeholder (new in v5.8)</a></div>
+        <div style="margin-left: 2em;"><a href="#Internationalization%20%28i18n%29-Placeholder%20%28new%20in%20v5.8%29">Placeholder
+            (new in v5.8)</a></div>
       </div>
-      Providing customized labels and messages for your application is done using the i18n files (whether you have multilingual requirements or not -- if not, you only have one version of the file in the primary language of your application).<br>
-      To show or hide warnings in the logs regarding missing labels or messages, set the property "i18nWarnings" in properties/xava.properties to true or false respectively.<br>
+      Providing customized labels and messages for your application is done
+      using the i18n files (whether you have multilingual requirements or not --
+      if not, you only have one version of the file in the primary language of
+      your application).<br>
+      To show or hide warnings in the logs regarding missing labels or messages,
+      set the property "i18nWarnings" in properties/xava.properties to true or
+      false respectively.<br>
       <h2 id="toc1"><a name="Internationalization (i18n)-Labels"></a>Labels</h2>
-      The label source file(s) are found in the i18n folder of your project, named <em>&lt;app&gt;-labels_&lt;lang&gt;.properties</em> (e.g. <em>MySchool-labels_en.properties</em>), and are copied by the build script into <em>web/WEB-INF/classes</em> folder.<br>
-      Your labels are applied in addition to the label source files provided by OpenXava project (which are found in the <em>../OpenXava/i18n</em> folder, are named <em>Labels_&lt;lang&gt;.properties</em>, and are also copied by the build script into your <em>web/WEB-INF/classes</em> folder). If the same entry appears in your file(s) and the OpenXava file(s), the one in your file will be used, which allows you the ability to customize the labels provided by OpenXava.<br>
+      The label source file(s) are found in the i18n folder of your project,
+      named <em>&lt;app&gt;-labels_&lt;lang&gt;.properties</em> (e.g. <em>MySchool-labels_en.properties</em>),
+      and are copied by the build script into <em>web/WEB-INF/classes</em>
+      folder.<br>
+      Your labels are applied in addition to the label source files provided by
+      OpenXava project (which are found in the <em>../OpenXava/i18n</em>
+      folder, are named <em>Labels_&lt;lang&gt;.properties</em>, and are also
+      copied by the build script into your <em>web/WEB-INF/classes</em>
+      folder). If the same entry appears in your file(s) and the OpenXava
+      file(s), the one in your file will be used, which allows you the ability
+      to customize the labels provided by OpenXava.<br>
       Comments can be included using # as the first character.<br>
-      Blank lines are allowed, and can be useful to visually separate things for easier reading.<br>
-      <h3 id="toc2"><a name="Internationalization (i18n)-Labels-Application Name"></a>Application Name</h3>
+      Blank lines are allowed, and can be useful to visually separate things for
+      easier reading.<br>
+      <h3 id="toc2"><a name="Internationalization (i18n)-Labels-Application Name"></a>Application
+        Name</h3>
       App name and description can be overridden like this:<br>
       <style type="text/css"><!--
 /**
@@ -44,12 +67,20 @@
 -->
 </style><pre class="text">MySchool=School ABC
 MySchool[description]=Welcome to the School ABC application</pre>
-      In general, many OpenXava items in this file can have <em>[description]</em> entries -- in the above example, the standard OX welcome page displays the app description. In most other cases, the <em>[description]</em> text is used for tool-tips that pop up when the mouse is hovered over the field.<br>
-      Note that if you wish to have a very verbose tooltip, you can embed special characters to help with formatting. Specifically, as of this writing, the newline (\n) and tab (\t) work fine. As an example, this entry<br>
-      <strong>studyId[description]=Unique Identifier per study \n See if this wraps... \n and this...\n\t try a tab....</strong><br>
+      In general, many OpenXava items in this file can have <em>[description]</em>
+      entries -- in the above example, the standard OX welcome page displays the
+      app description. In most other cases, the <em>[description]</em> text is
+      used for tool-tips that pop up when the mouse is hovered over the field.<br>
+      Note that if you wish to have a very verbose tooltip, you can embed
+      special characters to help with formatting. Specifically, as of this
+      writing, the newline (\n) and tab (\t) work fine. As an example, this
+      entry<br>
+      <strong>studyId[description]=Unique Identifier per study \n See if this
+        wraps... \n and this...\n\t try a tab....</strong><br>
       will produce the expected behavior.<br>
       <br>
-      <h3 id="toc3"><a name="Internationalization (i18n)-Labels-Module Name"></a>Module Name</h3>
+      <h3 id="toc3"><a name="Internationalization (i18n)-Labels-Module Name"></a>Module
+        Name</h3>
       Module name labels can be overridden like this:<br>
       <style type="text/css"><!--
 /**
@@ -62,8 +93,10 @@ MySchool[description]=Welcome to the School ABC application</pre>
 
 -->
 </style><pre class="text">Classroom.module=Class Room</pre>
-      <h3 id="toc4"><a name="Internationalization (i18n)-Labels-Field Name"></a>Field Name</h3>
-      Fields which are used in many places in the application can be overridden globally like this:<br>
+      <h3 id="toc4"><a name="Internationalization (i18n)-Labels-Field Name"></a>Field
+        Name</h3>
+      Fields which are used in many places in the application can be overridden
+      globally like this:<br>
       <style type="text/css"><!--
 /**
  * GeSHi (C) 2004 - 2007 Nigel McNie, 2007 - 2008 Benny Baumann
@@ -87,7 +120,8 @@ MySchool[description]=Welcome to the School ABC application</pre>
 
 -->
 </style><pre class="text">Classroom.location=Door Badge</pre>
-      For associations, there is often a qualified field, which can be overridden like this:<br>
+      For associations, there is often a qualified field, which can be
+      overridden like this:<br>
       <style type="text/css"><!--
 /**
  * GeSHi (C) 2004 - 2007 Nigel McNie, 2007 - 2008 Benny Baumann
@@ -100,12 +134,15 @@ MySchool[description]=Welcome to the School ABC application</pre>
 -->
 </style><pre class="text">Project.currentManager.managerName=PM Name</pre>
     </div>
-    <div class="wiki" style="display: block;">For default view:<br>
+    <div class="wiki" style="display: block;">For the default view, so it has
+      only effect in detail mode:<br>
       <pre class="text">Customer.view.name=Customer Name</pre>
-      For specific view:<br>
+      For a specific view, for the view named "Simple" in this example:<br>
       <pre class="text">Customer.views.Simple.name=C Name</pre>
     </div>
-    <div class="wiki" style="display: block;">In List mode, qualified names are automatically qualified by OpenXava like this: Manager name of Current manager. If this is not desired, it can be overridden like this:<br>
+    <div class="wiki" style="display: block;">In List mode, qualified names are
+      automatically qualified by OpenXava like this: Manager name of Current
+      manager. If this is not desired, it can be overridden like this:<br>
       <style type="text/css"><!--
 /**
  * GeSHi (C) 2004 - 2007 Nigel McNie, 2007 - 2008 Benny Baumann
@@ -141,8 +178,12 @@ MySchool[description]=Welcome to the School ABC application</pre>
 
 -->
 </style><pre class="text">*.tab.properties.currentManager.managerName=PM Name</pre>
-      <h3 id="toc5"><a name="Internationalization (i18n)-Labels-@View Section and Group Names"></a>@View Section and Group Names</h3>
-      Section and Group names in an <em>@View</em> can be overridden as well. For example, if I have a section name "s_overview" and a group "g_pgm_dates" defined in a <em>@View</em> in Entity Program, the labels can be overridden like this:<br>
+      <h3 id="toc5"><a name="Internationalization (i18n)-Labels-@View Section and Group Names"></a>@View
+        Section and Group Names</h3>
+      Section and Group names in an <em>@View</em> can be overridden as well.
+      For example, if I have a section name "s_overview" and a group
+      "g_pgm_dates" defined in a <em>@View</em> in Entity Program, the labels
+      can be overridden like this:<br>
       <style type="text/css"><!--
 /**
  * GeSHi (C) 2004 - 2007 Nigel McNie, 2007 - 2008 Benny Baumann
@@ -156,9 +197,11 @@ MySchool[description]=Welcome to the School ABC application</pre>
 </style><pre class="text">Program.s_overview=Overview
 g_pgm_dates=Program Milestone Dates
 &nbsp;</pre>
-      Note that as of OpenXava 5.4, Group names do not seem to support any dot-notation.<br>
+      Note that as of OpenXava 5.4, Group names do not seem to support any
+      dot-notation.<br>
       <h3 id="toc6"><a name="Internationalization (i18n)-Labels-Actions"></a>Actions</h3>
-      Action button names can be overridden using the format &lt;Controller-name&gt;.&lt;action-name&gt; like this:<br>
+      Action button names can be overridden using the format
+      &lt;Controller-name&gt;.&lt;action-name&gt; like this:<br>
       <style type="text/css"><!--
 /**
  * GeSHi (C) 2004 - 2007 Nigel McNie, 2007 - 2008 Benny Baumann
@@ -171,13 +214,25 @@ g_pgm_dates=Program Milestone Dates
 -->
 </style><pre class="text">ListProjectsForProgram.listProjects=List Projects</pre>
       <h3><a name="organization"></a>Organization</h3>
-      The organization name is shown in reports and it is specified with the <i>xava.organization</i> entry, thus:<br>
+      The organization name is shown in reports and it is specified with the <i>xava.organization</i>
+      entry, thus:<br>
       <pre class="text">xava.organization=My Company Inc</pre>
       <h2 id="toc7"><a name="Internationalization (i18n)-Messages"></a>Messages</h2>
-      The message source file(s) are also found in the <em>i18n</em> folder of your project, named <em>&lt;app&gt;-messages_en.properties</em> (e.g. <em>MySchool-messages_en.properties</em>), and are copied by the build script to the <em>web/WEB-INF/classes</em> folder.<br>
-      Your messages are applied in addition to the message source files provided by OpenXava project (which are found in the <em>../OpenXava/i18n</em> folder, are named <em>Messages_&lt;lang&gt;.properties</em>, and are also copied by the build script into your <em>web/WEB-INF/classes</em> folder). If the same entry appears in your file(s) and the OpenXava file(s), the one in your file will be used, which allows you the ability to customize the messages provided by OpenXava.<br>
+      The message source file(s) are also found in the <em>i18n</em> folder of
+      your project, named <em>&lt;app&gt;-messages_en.properties</em> (e.g. <em>MySchool-messages_en.properties</em>),
+      and are copied by the build script to the <em>web/WEB-INF/classes</em>
+      folder.<br>
+      Your messages are applied in addition to the message source files provided
+      by OpenXava project (which are found in the <em>../OpenXava/i18n</em>
+      folder, are named <em>Messages_&lt;lang&gt;.properties</em>, and are also
+      copied by the build script into your <em>web/WEB-INF/classes</em>
+      folder). If the same entry appears in your file(s) and the OpenXava
+      file(s), the one in your file will be used, which allows you the ability
+      to customize the messages provided by OpenXava.<br>
       <h2 id="toc8"><a name="Internationalization (i18n)-Tooltips"></a>Tooltips</h2>
-      To define a tooltip add the suffix <em>[description]</em> in the labels i18n file of your project, for the element (action, property, etc) where you want the tooltip. For example, with next entry in your labels file:<br>
+      To define a tooltip add the suffix <em>[description]</em> in the labels
+      i18n file of your project, for the element (action, property, etc) where
+      you want the tooltip. For example, with next entry in your labels file:<br>
       <style type="text/css"><!--
 /**
  * GeSHi (C) 2004 - 2007 Nigel McNie, 2007 - 2008 Benny Baumann
@@ -206,8 +261,11 @@ g_pgm_dates=Program Milestone Dates
       <br>
       Since v5.8 if the label and the tooltip matches the tooltip is not shown.<br>
       <br>
-      <h2 id="toc9"><a name="Internationalization (i18n)-Placeholder (new in v5.8)"></a>Placeholder <em>(new in v5.8)</em></h2>
-      To define a placeholder for a field add the suffix <em>[placeholder]</em> in the labels i18n file of your project. For example, with the next entry in your labels file:<br>
+      <h2 id="toc9"><a name="Internationalization (i18n)-Placeholder (new in v5.8)"></a>Placeholder
+        <em>(new in v5.8)</em></h2>
+      To define a placeholder for a field add the suffix <em>[placeholder]</em>
+      in the labels i18n file of your project. For example, with the next entry
+      in your labels file:<br>
       <style type="text/css"><!--
 /**
  * GeSHi (C) 2004 - 2007 Nigel McNie, 2007 - 2008 Benny Baumann
@@ -232,6 +290,7 @@ g_pgm_dates=Program Milestone Dates
 -->
 </style><pre class="xml">Color.number[placeholder]=Your num.</pre>
       You get:<br>
-      <img src="files/placeholder-en.GIF" alt="placeholder-en.GIF" title="placeholder-en.GIF"> </div>
+      <img src="files/placeholder-en.GIF" alt="placeholder-en.GIF" title="placeholder-en.GIF">
+    </div>
   </body>
 </html>
